# funcoes-python

./: README.md  exercicio-1.py  exercicio-2.py  exercicio-3.py  pyproject.toml
